@@ -1,3 +1,4 @@
+Fixed parser to factor out time for student to enter ID, see Parser.scala
 # 00.00.05 (58582) Nov 14, 2011
 # 00.00.04 (58580) Nov 14, 2011
 # null.null.00 (58578) Nov 14, 2011
